nate changed something

--- a/Browser Virus/DEDSECvirus.html
+++ b/Browser Virus/DEDSECvirus.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>My Project</title>
-    <style></style>
-<body>
+    <style>
+        #ad {height: 700px; width: 1000px;}
+    </style>
+<body onload="takeov">
 <table>
     <tr class="titleBar"></tr>
     <tr></tr>
