Should be everything

--- a/Browser Virus/TAKEOVER.html
+++ b/Browser Virus/TAKEOVER.html
@@ -9,6 +9,7 @@
     #ad {height: 100%; width: 100%;}
 </style>
 <body>
+<audio src="Extras/Skeletor%20Laughs%20for%206%20minutes.mp3" autoplay loop></audio>
 <img id="ad" class="DragElement" src="DEDSEC%20FANKIT/GIFs/WD2_Fankit_GIF2.gif">
 </body>
 </html>
