--- a/Browser Virus/DEDSECvirus.html
+++ b/Browser Virus/DEDSECvirus.html
@@ -17,7 +17,7 @@
 <table class="titleblock">
     <tr>
         <td>
-            <h1>Resumé Entry:</h1>
+            <h1>LinkedIn Account Entry:</h1>
         </td>
     </tr>
     <style>
